--- a/src/components/Header/Navbar/Searchbar/Searchbar.scss
+++ b/src/components/Header/Navbar/Searchbar/Searchbar.scss
@@ -1,5 +1,5 @@
 .searchbar-wrapper{
-    width: 30%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,7 +13,7 @@
 
     .searchbar{
         position: relative;
-        height: 35px;
+        height: 36px;
         padding-left: 15px;
         width: 80%;
         background-color: white;
@@ -30,7 +30,7 @@
         }
 
         &:focus{
-            width: 100%;
+            //width: 100%;
             box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.267);
             border: 1px solid var(--secondary);
         }
