--- a/src/components/Homepage/Banner/Banner.scss
+++ b/src/components/Homepage/Banner/Banner.scss
@@ -7,7 +7,7 @@
         background-image: linear-gradient(to top,rgb(0, 0, 0),rgba(0, 0, 0, 0)), url("https://m.media-amazon.com/images/M/MV5BNWI5NWVkYTQtOGE3Yy00Y2Q0LTllNjktOWZlYzYwYjEzZjBhXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg");
         flex: 1;
         min-height: 400px;
-        background-position: center;
+        background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
         display: flex;
@@ -23,6 +23,10 @@
                 color: white;
                 margin-bottom: 3%;
                 font-weight: 300;
+
+                @media all and (max-width: 700px){
+                    font-size: 1.3rem;
+                }
             }
 
             &-cta{
@@ -35,6 +39,10 @@
                 color: white;
                 transition: 0.1s transform linear;
                 box-shadow: 0 5px 20px 5px rgba(0, 0, 0, 0.507);
+
+                @media all and (max-width: 700px){
+                    font-size: 1.2rem;
+                }
 
                 &:hover{
                     transform: scale(1.05);
