--- a/src/components/Homepage/Movies/Movies.scss
+++ b/src/components/Homepage/Movies/Movies.scss
@@ -8,13 +8,32 @@
     min-height: 40vh;
     padding: 4% 4%;
 
+    @media all and (max-width: 700px){
+        padding: 3% 2%;
+    }
+
+
     &-genre{
         position: relative;
 
+        &:nth-child(even){
+            .heading{
+                background: rgba(0, 0, 0, 0.205);
+            }
+            .movies-info{
+                background: rgba(0, 0, 0, 0.205);
+            }
+        }
+
         .heading{
             font-size: 2.6rem;
+            font-style: italic;
             font-weight: 300;
             color: white;
+
+            @media all and (max-width: 700px){
+                font-size: 1.6rem;
+            }
         }
 
         .scroll-btn{
@@ -35,12 +54,10 @@
 
             &:hover{
                 color: var(--secondary);
-                height: 70px;
-                width: 70px;
             }
             &:active{
-                height: 65px;
-                width: 65px;
+                height: 63px;
+                width: 63px;
             }
         }
         .next-btn{
@@ -51,12 +68,19 @@
         }
     }
     &-info{
-        padding: 3% 3%;
+        padding: 3% 15%;
         display: flex;
-        min-height: 400px;
+        height: 300px;
+
+        @media all and (max-width: 700px){
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }        
 
         .poster{
-            flex: 1;
+            width: 150px;
+            margin-right: 10%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -66,14 +90,16 @@
             cursor: pointer;
             transition: transform 0.1s linear;
 
-            & > img {
-                height: 500px;
+            @media all and (max-width:700px){
+                height: 200px;
+                margin-right: 0;
             }
-           
-            &:hover{
-                transform: scale(1.03);
+
+            & > img {
+                height: 100%;
             }
         }
+
         .text{
             flex: 1;
             display: flex;
@@ -86,12 +112,24 @@
                 color: white;
                 margin-bottom: 5%;
             }
+
             .title{
-                font-size: 2.3rem;
+                font-size: 1.7rem;
+
+                @media all and (max-width: 700px){
+                    font-size: 1.3rem;
+                }
             }
+
             .year{
-                font-size: 1.4rem;
+                font-size: 1rem;
+
+                @media all and (max-width: 700px){
+                    font-size: 0.8rem;
+
+                }
             }
+
             .cta {
                 background: transparent;
                 border: 2px solid var(--secondary-dim);
@@ -100,6 +138,11 @@
                 padding: 8px 25px;
                 cursor: pointer;
                 transition: all 0.1s linear;
+
+                @media all and (max-width: 700px){
+                    font-size: 1.2rem;
+                    padding: 6px 15px;
+                }
 
                 &:hover{
                     background: var(--secondary-dim);
