--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,4 +6,29 @@ header {
     box-shadow:0 2px 10px 3px rgba(0, 0, 0, 0.377) ;
     position: fixed;
     width: 100vw;
+
+    .no-notification{
+        display: none;
+    }
+
+    .app-notification{
+        position: absolute;
+        top: 110%;
+        left: 50%;
+        opacity: 1;
+        transform: translateX(-50%);
+        background: rgb(226, 54, 54);
+        font-size: 0.9rem;
+        padding: 1% 2%;
+        color: white;
+    }
+}
+
+@keyframes popup {
+    0%{
+        opacity:1;
+    }
+    100%{
+        opacity: 1;
+    }
 }
