--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,20 +15,28 @@ header {
         position: absolute;
         top: 110%;
         left: 50%;
-        opacity: 1;
         transform: translateX(-50%);
-        background: rgb(226, 54, 54);
         font-size: 0.9rem;
-        padding: 1% 2%;
         color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: -1;
+        background: transparent;
+
+        div{
+            text-align: center;
+            padding: 1% 1%;
+            border-radius: 3px;
+        }
+
+        .error{
+            background: rgb(226, 54, 54); 
+        }
+
+        .success{
+            background: rgb(36, 163, 85);
+        }
     }
 }
 
-@keyframes popup {
-    0%{
-        opacity:1;
-    }
-    100%{
-        opacity: 1;
-    }
-}
