--- a/src/components/Authpage/Authpage.scss
+++ b/src/components/Authpage/Authpage.scss
@@ -1,9 +1,11 @@
 .authpage{
     display: flex;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-top: 0;
 
     &-info{
         position: absolute;
