--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,8 +4,8 @@ header {
     align-items: center;
     z-index: 5;
     box-shadow:0 2px 10px 3px rgba(0, 0, 0, 0.377) ;
-    position: fixed;
     width: 100vw;
+    position: relative;
 
     .no-notification{
         display: none;
