--- a/src/components/Main/Profilepage/Profilepage.scss
+++ b/src/components/Main/Profilepage/Profilepage.scss
@@ -1,7 +1,92 @@
 :root{
-    --text-color: rgba(0, 0, 0, 0.76);
+    --text-color: rgba(0, 0, 0, 0.726);
+    --border-color-dark:rgba(0, 0, 0, 0.171);
+    --border-color-light:rgba(0, 0, 0, 0.1);
 }
 
 .profile-page{
-    
+    //border: 1px solid red;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    font-family: Inter;
+    font-weight: 300;
+    color: var(--text-color);
+
+    &-title{
+        padding: 25px 4%;
+        font-size: 1.7rem;
+        border-bottom: 1px solid var(--border-color-dark)
+    }
+
+    &-main{
+        flex:1;
+        //border: 1px solid green;
+        display: flex;
+
+        .profile-info-wrapper{
+            //background: red;
+            flex: 2;
+            max-width: 325px;
+
+            .profile-info{
+                //background: green;
+                padding-top: 40px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+                &-photo{
+                    height: 150px;
+                    width: 150px;
+                    margin: 13px;
+
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 100px;
+                    }
+                }
+
+                &-username{
+                    font-size: 1.1rem;
+                    font-weight: 600;
+
+                    &:hover{
+                        text-decoration: underline;
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            .profile-settings-nav{
+                box-sizing: border-box;
+                width: 100%;
+                font-size: 1.3rem;
+                padding: 80px 0;
+                padding-left: 6%;
+
+                &-link{
+                    cursor: pointer;
+                    padding: 20px 10px;
+
+                    &:not(.link-active){
+                        &:hover{
+                            background: rgba(0, 0, 0, 0.041);
+                        }
+                    }
+                }
+                .link-active{
+                    background: var(--secondary-dim);
+                    color: white;
+                }
+            }
+        }
+
+        .profile-settings-wrapper{
+            flex: 5;
+            border-left:1px solid var(--border-color-light) ;
+        }
+    }
 }
