--- a/src/components/Main/Profilepage/EmailBox/EmailBox.scss
+++ b/src/components/Main/Profilepage/EmailBox/EmailBox.scss
@@ -1,6 +1,7 @@
-.textBox {
+.EmailBox {
     //border: 1px solid red;
     position: relative;
+    margin-bottom: 55px;
 
     &-label{
         font-size: 1rem;
@@ -17,7 +18,7 @@
         position: relative;
         height: 100%;
 
-        .textBox-input{
+        .EmailBox-input{
             position: relative;
             z-index: 3;
             height: 100%;
@@ -25,7 +26,7 @@
             height: 55px;
             font-size: 1.2rem;
             padding-left: 1%;
-            padding-right: 75px;
+            padding-right: 50px;
             box-sizing: border-box;
             background: transparent;
             border: 2px solid rgba(0, 0, 0, 0.575);
@@ -71,10 +72,6 @@
                 }
             }
 
-            .submitEditBtn{
-                
-            }
-
             .discardBtn{
                 svg{
                     height: 21px;
@@ -94,5 +91,20 @@
                 width: 45px;
             }
         }
+    }
+    .verifiedBox{
+        position: absolute;
+        bottom: -35px;
+        left: 1px;
+        border-radius: 4px;
+        font-size: 0.9rem;
+        padding: 5px 5px;
+        color: white;
+    }
+    .verified{
+        background: green;
+    }
+    .unverified{
+        background: red;
     }
 }
