--- a/src/components/Main/Profile/Info/Info.scss
+++ b/src/components/Main/Profile/Info/Info.scss
@@ -20,7 +20,11 @@
         max-width: 567px;
 
         .textBox{
-            margin-bottom: 40px;
+            margin-bottom: 25px;
+        }
+
+        .password-current{
+            margin-top: 30px;
         }
     }
 }
