--- a/src/components/Main/Profile/Delete/Delete.scss
+++ b/src/components/Main/Profile/Delete/Delete.scss
@@ -1,10 +1,12 @@
-.delete-account-page{
+.profile-delete-main{
     padding-top: 60px;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
 
-    .delete-btn-wrapper{
-        width: 567px;
+    .profile-delete-content{
+        width: 90%;
+        max-width: 567px;
         //border: 1px solid red;
         display: flex;
         flex-direction: column;
