--- a/src/portals/Searchbox/Searchbox.scss
+++ b/src/portals/Searchbox/Searchbox.scss
@@ -1,3 +1,19 @@
+.textBox-input-wrapper {
+    position: relative;
+
+    .loader{
+        position: absolute;
+        z-index: 5;
+        right: 8px;
+        top: 50%;
+        transform: translateY(-50%);
+        height: 40px;
+        width: 40px;
+        background: url('./load.gif');
+        background-size: contain;
+    }
+}
+
 .textBox-suggestion{
     position: absolute;
     top: 55px;
@@ -8,13 +24,13 @@
     background: white;
     border: 1px solid rgba(88, 88, 88, 0.24);
     border-radius: 8px;
+    
 
     &-items{
         width: 100%;
         //background: yellow;
         display: flex;
         flex-direction: column;
-        
 
         .search-suggestion{
             display: flex;
@@ -22,6 +38,12 @@
             padding: 7px 5px;
             border-bottom: 1px solid rgb(197, 197, 197);
             color: rgb(77, 75, 75);
+            cursor: pointer;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+            &:hover{
+                background: rgba(92, 193, 211, 0.151);
+            }
 
             .photo{
                 display: flex;
