--- a/src/portals/Upload.scss
+++ b/src/portals/Upload.scss
@@ -30,15 +30,14 @@
         padding-bottom: 20px;
 
         &-title{
-            flex: 0 0 100px;
-            //background: red;
+            flex: 0 0 60px;
             display: flex;
             align-items: center;
             justify-content: center;
             border-bottom: 1px solid rgba(0, 0, 0, 0.11);
 
             h2{
-                font-size: 1.8rem;
+                font-size: 2.2rem;
                 font-weight: 200;
             }
         }
@@ -63,9 +62,49 @@
                         margin-right: 3%;
                     }
                 }
+
+                .inputs{
+                    //background: red;
+                    padding: 0 15px;
+
+                    .textBox{
+                        background: white;
+                        &:not(:last-child){
+                            margin-bottom: 18px;
+                        }
+
+                        &-input{
+                            padding: 0;
+                            padding-left: 5px;
+                        }
+                    }
+
+                    .action-btn-wrapper{
+                        padding: 0 60px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        button{
+                            padding: 0 50px;
+                            background: var(--primary-dark);
+                        }
+                    }
+                }
             }
         }
     }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 
