--- a/src/portals/Upload/Upload.scss
+++ b/src/portals/Upload/Upload.scss
@@ -1,6 +1,6 @@
 .portal{
     position: fixed;
-    z-index: 6;
+    z-index: 10;
     height: 100vh;
     width: 100vw;
 }
@@ -10,7 +10,6 @@
     top: 0;
     height: 100vh;
     width: 100vw;
-    z-index: 10;
     background: rgba(0, 0, 0, 0.568);
     display: flex;
     justify-content: center;
@@ -21,7 +20,7 @@
     .upload-box{
         background: white;
         border-radius: 10px;
-        height: 650px;
+        min-height: 650px;
         width: 550px;
         display: flex;
         flex-direction: column;
